data/forge_javadoc/1.9.4/raw/net/minecraft/client/model/ModelChicken.md
---
title: "ModelChicken"
description: "public class ModelChicken extends ModelBase"
package: "net/minecraft/client/model"
version: "1.9.4"
forgeBuild: "12.17.0.2051"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.9.4-12.17.0.2051/net/minecraft/client/model/ModelChicken.html"
sourceType: javadoc
---

# ModelChicken

**Inheritance:** java.lang.Object → net.minecraft.client.model.ModelBase → net.minecraft.client.model.ModelChicken

## Class signature

```java
public class ModelChicken extends ModelBase
```

## Constructors

- `ModelChicken()`

## Methods

- `void render(Entity entityIn, float limbSwing, float limbSwingAmount, float ageInTicks, float netHeadYaw, float headPitch, float scale)`
- `void setRotationAngles(float limbSwing, float limbSwingAmount, float ageInTicks, float netHeadYaw, float headPitch, float scaleFactor, Entity entityIn)`

## Fields

- `ModelRenderer bill`
- `ModelRenderer body`
- `ModelRenderer chin`
- `ModelRenderer head`
- `ModelRenderer leftLeg`
- `ModelRenderer leftWing`
- `ModelRenderer rightLeg`
- `ModelRenderer rightWing`
